# rat_web_credential_encryptor

./: .gitignore  Cargo.toml  README.md
examples/: test_js_rust.rs
examples/login_server/: Cargo.toml
examples/login_server/src/: main.rs
examples/static/: login.html  success.html
js_lib/: README.md  encrypt_login.cjs  encrypt_login.md  package.json  test_login.cjs  tsconfig.json
js_lib/src/: crypto.ts  crypto_compat.rs  index.ts
js_lib/test/: crypto.test.ts
src/: cipher.rs  ecdh.rs  error.rs  key.rs  lib.rs  session.rs
