[package]
name = "rat_web_credential_encryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { version = "0.13", features = ["ecdh"] }
aes = "0.8"
aes-gcm = "0.10"
ctr = "0.9"
base64ct = { version = "1.6", features = ["alloc"] }
rand_core = "0.6"
rand = "0.8"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", optional = true, features = ["time"] }

[features]
default = []
session-manager-cleanup = ["tokio"]

[dev-dependencies]
hex = "0.4"
