[package]
name = "login_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# 引用父项目的加密库
rat_web_credential_encryptor = { path = "../.." }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4"] }
base64ct = { version = "1.6", features = ["alloc"] }
